--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<nav class="main-menu">
 				<ul class="menu-list">
 					<li><a href="">Solution</a></li>
-					<li><a href="">Features</a></li>
+					<li><a href="">Services</a></li>
 					<li><a href="./blog.html">News</a></li>
 					<li><a href="./about.html">About</a></li>
 					<li><a href="./contact.html">Contact</a></li>
@@ -103,7 +103,7 @@
 						Citizen Trust is a trademark and a duly registered Venture Capital Fund Management Firm with the
 						Corporate Affairs Commission(CAC) and the Securities And Exchange Commission(SEC) in the Federal
 						Republic of Nigeria.</p>
-					<a href="" class="site-btn sb-gradients sbg-line mt-5">Get Started</a>
+					<a href="" class="site-btn sb-gradients sbg-line mt-5">Learn More</a>
 				</div>
 			</div>
 			<div class="about-img">
@@ -142,37 +142,42 @@
 	<section class="process-section spad">
 		<div class="container">
 			<div class="section-title text-center">
-				<h2>Get Started With Bitcoin</h2>
+				<h2>Our Services</h2>
 				<p>Start learning about Bitcoin with interactive tutorials. It’s fun, easy, and takes only a few
 					minutes! </p>
 			</div>
 			<div class="row">
 				<div class="col-md-4 process">
 					<div class="process-step">
-						<figure class="process-icon">
-							<img src="img/process-icons/1.png" alt="#">
-						</figure>
-						<h4>Create Your Wallet</h4>
+						<h4>VENTURE CAPITAL FUND MANAGEMENT</h4>
 						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim
 							id est laborum. </p>
 					</div>
 				</div>
 				<div class="col-md-4 process">
 					<div class="process-step">
-						<figure class="process-icon">
-							<img src="img/process-icons/2.png" alt="#">
-						</figure>
-						<h4>Create Your Wallet</h4>
+						<h4>MERGERS & ACQUISITION MANAGEMENT</h4>
 						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim
 							id est laborum. </p>
 					</div>
 				</div>
 				<div class="col-md-4 process">
 					<div class="process-step">
-						<figure class="process-icon">
-							<img src="img/process-icons/3.png" alt="#">
-						</figure>
-						<h4>Create Your Wallet</h4>
+						<h4>PUBLIC-TO-PRIVATE/LBO</h4>
+						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim
+							id est laborum. </p>
+					</div>
+				</div>
+				<div class="col-md-4 process">
+					<div class="process-step">
+						<h4>STARTUP INCUBATION SERVICES</h4>
+						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim
+							id est laborum. </p>
+					</div>
+				</div>
+				<div class="col-md-4 process">
+					<div class="process-step">
+						<h4>STARTUP MENTORING & SCOUTING as a SERVICES(SAAS)</h4>
 						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim
 							id est laborum. </p>
 					</div>
@@ -560,15 +565,13 @@
 					<a href="index.html" class="site-logo">
 						<div class="citizen-logo2"></div>
 					</a>
-					<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia dese mollit anim id est
-						laborum.</p>
 					<span>
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						Copyright &copy;<script>
 							document.write(new Date().getFullYear());
-						</script> All rights reserved | This template is made with <i class="fa fa-heart-o"
-							aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+						</script> All rights reserved 
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></span>
+						<p class="location">94, Broad Street Lagos Island, Nigeria West Africa.</p>
 				</div>
 				<div class="col-md-6 col-lg-2 offset-lg-1 footer-widget">
 					<h5 class="widget-title">Resources</h5>
@@ -607,8 +610,9 @@
 							<li><a href="">DPA</a></li>
 							<li><a href="">Terms of Use</a></li>
 							<li><a href="">Privacy Policy </a></li>
-							<li><a href="">support@company.com</a></li>
-							<li><a href="">(123) 456-7890</a></li>
+							<li><a href="">mail@citizen-trust.com</a></li>
+							<li><a href="">ask@citizen-trust.com</a></li>
+							<li><a href="">01 454 0063, 08099995777</a></li>
 						</ul>
 					</div>
 				</div>
