--- a/index.html
+++ b/index.html
@@ -331,7 +331,27 @@
 						<h2>Oluwafemi Samuel Alabi</h2>
 						<span>Chief Financial Officer</span>
 					</div>
-					<p></p>
+					<p>
+						Oluwafemi Samuel Alabi is an Experienced Chartered Accountant that has broad knowledge that
+						spans through the areas of; Management Accounting, Financial Reporting, Auditing, Risk
+						Management and Tax Management.
+
+						He holds a Bachelor's degree in Economics from Lagos state University and also a Higher National
+						Diploma in Accounting with Distinction Classification from Osun State College of Technology, esa
+						oke.
+
+						He is an Associate Accounting Technician (AAT) and an Associate Chartered Accountant (ACA) of
+						the Institute of Chartered Accountants of Nigeria (ICAN). He is also an Associate member of
+						Chartered Institute of Taxation of Nigeria (CITN) and a Member of Nigerian Institute of
+						Management (NIM).
+
+						Oluwafemi Samuel Alabi started his career in the shares and securities section of FBN Capital
+						Ltd, and advanced as an External Auditor and Tax Inspector at Gbeke Oyeniyi & Co (Chartered
+						Accountants). He worked as an Internal Audit Officer at Propetrol Limited (An Oil & Gas
+						Marketing Company) and also as an Internal Auditor at United Geophysical (Nigeria) Limited (A
+						Seismic data acquisition Company, a player in the Upstream Oil and Gas Sector), before joining
+						Asset and Equity Group as the Group Financial Executive
+					</p>
 				</div>
 			</div>
 			<!-- Team member -->
@@ -422,9 +442,8 @@
 					<img src="img/quote.png" alt="" class="quote mb-5">
 					<div class="review-text-slider owl-carousel">
 						<div class="review-text">
-							<p>"Bitcoin is exciting because it shows how cheap it can be. Bitcoin is better than
-								currency in that you don’t have to be physically in the same place and, of course, for
-								large transactions, currency can get pretty inconvenient.”</p>
+							<p>"Citizen Trust by structure is one of its kind and as a Stakeholder myself, it is quite fulfilling
+								to be part of such an innovatively stable entity.”</p>
 						</div>
 						<div class="review-text">
 							<p>"Bitcoin is exciting because it shows how cheap it can be. Bitcoin is better than
@@ -443,8 +462,8 @@
 						<div class="author-meta">
 							<div class="author-avatar set-bg" data-setbg="img/review/1.jpg"></div>
 							<div class="author-name">
-								<h4>Aaron Ballance</h4>
-								<p>Ceo Bitcoin</p>
+								<h4>Abayomi Michael Osho</h4>
+								<p>Managing Director/CEO</p>
 							</div>
 						</div>
 						<div class="author-meta">
@@ -569,9 +588,9 @@
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						Copyright &copy;<script>
 							document.write(new Date().getFullYear());
-						</script> All rights reserved 
+						</script> All rights reserved
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></span>
-						<p class="location">94, Broad Street Lagos Island, Nigeria West Africa.</p>
+					<p class="location">94, Broad Street Lagos Island, Nigeria West Africa.</p>
 				</div>
 				<div class="col-md-6 col-lg-2 offset-lg-1 footer-widget">
 					<h5 class="widget-title">Resources</h5>
