--- a/index.html
+++ b/index.html
@@ -442,18 +442,16 @@
 					<img src="img/quote.png" alt="" class="quote mb-5">
 					<div class="review-text-slider owl-carousel">
 						<div class="review-text">
+							<p>"Bitcoin is exciting because it shows how cheap it can be. Bitcoin is better than
+								currency in that you don’t have to be physically in the same place and, of course, for
+								large transactions, currency can get pretty inconvenient.”</p>
+						</div>
+						<div class="review-text">
 							<p>"Citizen Trust by structure is one of its kind and as a Stakeholder myself, it is quite fulfilling
 								to be part of such an innovatively stable entity.”</p>
 						</div>
 						<div class="review-text">
-							<p>"Bitcoin is exciting because it shows how cheap it can be. Bitcoin is better than
-								currency in that you don’t have to be physically in the same place and, of course, for
-								large transactions, currency can get pretty inconvenient.”</p>
-						</div>
-						<div class="review-text">
-							<p>"Bitcoin is exciting because it shows how cheap it can be. Bitcoin is better than
-								currency in that you don’t have to be physically in the same place and, of course, for
-								large transactions, currency can get pretty inconvenient.”</p>
+							<p>"Every one of our service claims is supported by evidence.”</p>
 						</div>
 					</div>
 				</div>
@@ -469,15 +467,15 @@
 						<div class="author-meta">
 							<div class="author-avatar set-bg" data-setbg="img/review/2.jpg"></div>
 							<div class="author-name">
-								<h4>Jackson Nash</h4>
-								<p>Head of Design</p>
+								<h4>Katy Abrams</h4>
+								<p>Product Manager</p>
 							</div>
 						</div>
 						<div class="author-meta">
 							<div class="author-avatar set-bg" data-setbg="img/review/3.jpg"></div>
 							<div class="author-name">
-								<h4>Katy Abrams</h4>
-								<p>Product Manager</p>
+								<h4>Tyrin Joel Osimen</h4>
+								<p>Chief Technology Officer</p>
 							</div>
 						</div>
 					</div>
