--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 hero-text">
-					<h2>Invest in <span>Bitcoin</span> <br>Bitcoin Trading</h2>
-					<h4>Use modern progressive technologies of Bitcoin to earn money</h4>
+					<h2>Hi, Come <span>Partner</span> <br>With Us.</h2>
+					<h4>Take advantage of our amazing solution strategies.</h4>
 					<form class="hero-subscribe-from">
 						<input type="text" placeholder="Enter your email">
 						<button class="site-btn sb-gradients">Get Started</button>
@@ -143,8 +143,7 @@
 		<div class="container">
 			<div class="section-title text-center">
 				<h2>Our Services</h2>
-				<p>Start learning about Bitcoin with interactive tutorials. It’s fun, easy, and takes only a few
-					minutes! </p>
+				<p>Get more insight on the services we provide. Feel free to try us out. We aim to please. </p>
 			</div>
 			<div class="row">
 				<div class="col-md-4 process">
