--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 				<div class="member-info">
 					<div class="member-img mf set-bg" data-setbg="img/member/4.jpg"></div>
 					<div class="member-meta">
-						<h2>Tyrin Joel Osimen</h2>
+						<h2>Tyrin-J Osimen</h2>
 						<span>Chief Technology Officer</span>
 					</div>
 					<p>Tyrin as he is fondly called is a well sought-after, tested and trusted software architect with
