--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 				<div class="col-md-6 hero-text">
 					<h2>Hi, Come <span>Partner</span> <br>With Us.</h2>
 					<h4>Take advantage of our amazing solution strategies.</h4>
-					<form class="hero-subscribe-from">
-						<input type="text" placeholder="Enter your email">
-						<button class="site-btn sb-gradients">Get Started</button>
+					<form class="hero-subscribe-from" action="https://formspree.io/ibeh154@gmail.com" method="POST">
+						<input type="email" name="_replyto" placeholder="Enter your email">
+						<button class="site-btn sb-gradients" type="submit" value="Get Started">Get Started</button>
 					</form>
 				</div>
 				<div class="col-md-6">
@@ -107,7 +107,7 @@
 				</div>
 			</div>
 			<div class="about-img">
-				<img src="img/about-img.png" alt="">
+				<img src="img/man-and-woman_0001_Layer-4-copy.png"  alt="">
 			</div>
 		</div>
 	</section>
@@ -149,36 +149,31 @@
 				<div class="col-md-4 process">
 					<div class="process-step">
 						<h4>VENTURE CAPITAL FUND MANAGEMENT</h4>
-						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim
-							id est laborum. </p>
+						<p> • Citizen Tech Fund(CTF)<br> • Citizen Agric Fund(CAF)<br> • Citizen Renewable Energy Fund(CREF)<br> • Citizen Natural Resource  Fund(CNFR)<br> • Citizen Asset & Finance Fund(CAFF)</p>
 					</div>
 				</div>
 				<div class="col-md-4 process">
 					<div class="process-step">
 						<h4>MERGERS & ACQUISITION MANAGEMENT</h4>
-						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim
-							id est laborum. </p>
+						<p>• LBO/MBO/MBI<br>• Public-To-Private</p>
 					</div>
 				</div>
 				<div class="col-md-4 process">
 					<div class="process-step">
 						<h4>PUBLIC-TO-PRIVATE/LBO</h4>
-						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim
-							id est laborum. </p>
+						<p> • Bootcamp<br> • Strategic Planning & Execution<br> • Seed Funding</p>
 					</div>
 				</div>
 				<div class="col-md-4 process">
 					<div class="process-step">
 						<h4>STARTUP INCUBATION SERVICES</h4>
-						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim
-							id est laborum. </p>
+						<p> • Warehousing<br>• Training<br>• Representation<br>• Investor/Investee Match-making</p>
 					</div>
 				</div>
 				<div class="col-md-4 process">
 					<div class="process-step">
 						<h4>STARTUP MENTORING & SCOUTING as a SERVICES(SAAS)</h4>
-						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim
-							id est laborum. </p>
+						<p>• Regulatory Consulting<br>• Financial Consulting<br>• Business Intelligence</p>
 					</div>
 				</div>
 			</div>
@@ -188,7 +183,7 @@
 
 
 	<!-- Fact section -->
-	<section class="fact-section gradient-bg">
+	<!-- <section class="fact-section gradient-bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6 col-md-6 col-lg-3">
@@ -221,7 +216,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- Fact section end -->
 
 
@@ -368,7 +363,7 @@
 				<div class="member-info">
 					<div class="member-img mf set-bg" data-setbg="img/member/4.jpg"></div>
 					<div class="member-meta">
-						<h2>Tyrin-J Osimen</h2>
+						<h2>Tyrin Joel Osimen</h2>
 						<span>Chief Technology Officer</span>
 					</div>
 					<p>Tyrin as he is fondly called is a well sought-after, tested and trusted software architect with
@@ -446,7 +441,8 @@
 								large transactions, currency can get pretty inconvenient.”</p>
 						</div>
 						<div class="review-text">
-							<p>"Citizen Trust by structure is one of its kind and as a Stakeholder myself, it is quite fulfilling
+							<p>"Citizen Trust by structure is one of its kind and as a Stakeholder myself, it is quite
+								fulfilling
 								to be part of such an innovatively stable entity.”</p>
 						</div>
 						<div class="review-text">
@@ -494,9 +490,9 @@
 					<p>Sign up for our weekly industry updates, insider perspectives and in-depth market analysis.</p>
 				</div>
 				<div class="col-lg-5 col-md-8 offset-lg-0 offset-md-2">
-					<form class="newsletter-form">
-						<input type="text" placeholder="Enter your email">
-						<button>Get Started</button>
+					<form class="newsletter-form" action="https://formspree.io/ibeh154@gmail.com" method="POST">
+						<input type="email" name="_replyto" placeholder="Enter your email">
+						<button class="submit" type="submit" value="Get Started">Get Started</button>
 					</form>
 				</div>
 			</div>
@@ -507,15 +503,15 @@
 
 
 	<!-- Blog section -->
-	<section class="blog-section spad">
+	<!-- <section class="blog-section spad">
 		<div class="container">
 			<div class="section-title text-center">
 				<h2>Latest News</h2>
 				<p>Bitcoin is the simplest way to exchange money at very low cost.</p>
 			</div>
-			<div class="row">
+			<div class="row"> -->
 				<!-- blog item -->
-				<div class="col-md-4">
+				<!-- <div class="col-md-4">
 					<div class="blog-item">
 						<figure class="blog-thumb">
 							<img src="img/blog/1.jpg" alt="">
@@ -531,9 +527,9 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<!-- blog item -->
-				<div class="col-md-4">
+				<!-- <div class="col-md-4">
 					<div class="blog-item">
 						<figure class="blog-thumb">
 							<img src="img/blog/2.jpg" alt="">
@@ -549,9 +545,9 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<!-- blog item -->
-				<div class="col-md-4">
+				<!-- <div class="col-md-4">
 					<div class="blog-item">
 						<figure class="blog-thumb">
 							<img src="img/blog/3.jpg" alt="">
@@ -569,7 +565,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- Blog section end -->
 
 
