--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@
 					<p>Citizen Trust Limited is a Venture Capital/Private Equity Firm in Broad Street Lagos Island
 						Nigeria with interest in seed, early-stage, growth investments into startups and existing firms
 						that possess high and stable growth potentials with visions that align with our Strategic Focus
-						as well as our clients' goals and objectives.
+						as well as our clients' goals and objectives.</p><br>
 
 
 
-						Founders see us as an interestingly amazing solutionist, as we are unrestricted and unbounded by
+						<p>Founders see us as an interestingly amazing solutionist, as we are unrestricted and unbounded by
 						traditional industry limitations and practices. At Citizen Trust, we create a fine blend of
 						partnership, mentorship and adequate funding for our investors and investees alike such that the
 						integration is seamless even as we maintain multi-diversification of cultures, races, beliefs
-						with strong ethical stance and balance.
+						with strong ethical stance and balance.</p><br>
 
 
 
-						Citizen Trust is a trademark and a duly registered Venture Capital Fund Management Firm with the
+						<p>Citizen Trust is a trademark and a duly registered Venture Capital Fund Management Firm with the
 						Corporate Affairs Commission(CAC) and the Securities And Exchange Commission(SEC) in the Federal
 						Republic of Nigeria.</p>
 					<a href="" class="site-btn sb-gradients sbg-line mt-5">Learn More</a>
@@ -160,19 +160,19 @@
 				</div>
 				<div class="col-md-4 process">
 					<div class="process-step">
-						<h4>PUBLIC-TO-PRIVATE/LBO</h4>
+						<h4>STARTUP INCUBATION SERVICES</h4>
 						<p> • Bootcamp<br> • Strategic Planning & Execution<br> • Seed Funding</p>
 					</div>
 				</div>
 				<div class="col-md-4 process">
 					<div class="process-step">
-						<h4>STARTUP INCUBATION SERVICES</h4>
+						<h4>STARTUP MENTORING & SCOUTING as a SERVICES(SAAS)</h4>
 						<p> • Warehousing<br>• Training<br>• Representation<br>• Investor/Investee Match-making</p>
 					</div>
 				</div>
 				<div class="col-md-4 process">
 					<div class="process-step">
-						<h4>STARTUP MENTORING & SCOUTING as a SERVICES(SAAS)</h4>
+						<h4>ADVISORY</h4>
 						<p>• Regulatory Consulting<br>• Financial Consulting<br>• Business Intelligence</p>
 					</div>
 				</div>
